--- a/YGSCCalendarF/Base.lproj/Main.storyboard
+++ b/YGSCCalendarF/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                         </view>
                                         <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                                         <connections>
-                                            <outlet property="dayLabel" destination="3HT-Je-xbH" id="bak-bS-FUF"/>
+                                            <outlet property="dayLabel" destination="3HT-Je-xbH" id="jri-FJ-Bzi"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -51,12 +51,22 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="ac5-Wp-qp8"/>
                                 </connections>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2015/10/10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="J5h-Mr-Ach">
+                                <rect key="frame" x="16" y="20" width="343" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="38"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="667"/>
                     <connections>
+                        <outlet property="monthLabel" destination="J5h-Mr-Ach" id="ufh-Uc-l8B"/>
                         <outlet property="montheCalendarView" destination="uCL-vR-4UC" id="IjW-Zy-s2d"/>
                     </connections>
                 </viewController>
